--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.82",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@vercel/analytics": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flexbox-grid": "^2.1.2",
